--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@
 /*
 HELPERS =================
 */
+:focus-visible {
+  outline: none;
+}
+
 .px-60 {
   padding-left: 3.75rem;
   padding-right: 3.75rem;
